--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,6 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    
     "start": "nodemon src/app.js"
   },
   "keywords": [],
@@ -12,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
